--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "java.configuration.updateBuildConfiguration": "interactive"
+  "java.configuration.updateBuildConfiguration": "automatic",
+  "java.project.sourcePaths": [
+    "app/src/main/java"
+  ],
+  "java.compile.nullAnalysis.mode": "automatic",
+  "java.format.settings.url": "eclipse-formatter.xml"
 }
