feat: add google-java-format extension and settings
Introduce google-java-format extension and configure formatting settings for Java files.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,7 +14,8 @@
 	"customizations": {
 		"vscode": {
 			"extensions": [
-				"maattdd.gitless"
+				"maattdd.gitless",
+				"JoseVSeb.google-java-format-for-vs-code"
 			]
 		}
 	}
