--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
+  "[java]": {
+    "editor.defaultFormatter": "josevseb.google-java-format-for-vs-code"
+  },
+  "java.compile.nullAnalysis.mode": "automatic",
   "java.configuration.updateBuildConfiguration": "automatic",
+  "java.format.settings.google.extra": "--aosp",
   "java.project.sourcePaths": [
     "app/src/main/java"
-  ],
-  "java.compile.nullAnalysis.mode": "automatic",
-  "java.format.settings.url": "eclipse-formatter.xml"
+  ]
 }
