feat: implemented more functions into patient view (WIP)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,6 @@
   "java.project.sourcePaths": [
     "app/src/main/java"
   ],
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "java.debug.settings.onBuildFailureProceed": true
 }
