chore: remove unneeded setting

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,5 @@
   "java.project.sourcePaths": [
     "app/src/main/java"
   ],
-  "editor.formatOnSave": true,
-  "java.debug.settings.onBuildFailureProceed": true
+  "editor.formatOnSave": true
 }
