--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -38,6 +38,27 @@ jobs:
           add-paths: |
             *.java
 
+ build-jar:
+   runs-on: ubuntu-latest
+   steps:
+     - name: Checkout repository
+       uses: actions/checkout@v2
+
+     - name: Set up JDK 21
+       uses: actions/setup-java@v4
+       with:
+         distribution: 'temurin'
+         java-version: '21'
+
+     - name: Build Jar
+       run: ./gradlew buildJar
+
+     - name: Upload Jar as artifact
+       uses: actions/upload-artifact@v3
+       with:
+         name: HMS.jar
+         path: app/HMS.jar
+
   build-docs:
     runs-on: ubuntu-latest
     steps:
